OpenAPI extended
